Additional business objects and update login UI

--- a/DHK.Blazor.Server/Pages/LoginComponent.razor
+++ b/DHK.Blazor.Server/Pages/LoginComponent.razor
@@ -23,7 +23,7 @@ min-width: 220px !important;}
         <div class="col-lg-4 col-spacer"></div>
         <div class="col-lg-4 login-form">
             <div class="login-logo">
-                <img src="/images/DKH_Logo_Main.png" class="img-fluid dhk-login-img" />
+                <img src="/images/DKH_LOGO_RED.png" class="img-fluid dhk-login-img" />
             </div>
             @{
                 base.BuildRenderTree(__builder);
