Database structure updated and importing function

--- a/DHK.Blazor.Server/Pages/LoginComponent.razor
+++ b/DHK.Blazor.Server/Pages/LoginComponent.razor
@@ -15,10 +15,14 @@
 font-size: 1rem;}
 .logon-main.card .card-header .dxbl-toolbar.dxbl-toolbar-adaptive.dxbl-loaded {
 min-width: 220px !important;}
-
+#logon-template-component:not(.dhk-login #logon-template-component) {
+    background: none;
+}
 </style>
 
-<div class="container-fluid dhk-login">
+<div class="container-fluid dhk-logins" style="height: 100vh;
+    background: url('../images/tcu.jpg') 0 0 no-repeat;
+    background-size: cover;">
     <div class="row align-items-center">
         <div class="col-lg-4 col-spacer"></div>
         <div class="col-lg-4 login-form">
