--- a/DHK.Blazor.Server/wwwroot/css/site.css
+++ b/DHK.Blazor.Server/wwwroot/css/site.css
@@ -199,7 +199,7 @@ html, body {
 .logon-template-header .header-logo {
     flex-shrink: 0;
     background-color: currentColor;
-    background: url('../images/DKH_LOGO_RED.png');
+    background: url('../images/DKH_LOGO_WHITE.png');
     background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
