Update Tracker and able to hide documents using sections

--- a/DHK.Blazor.Server/wwwroot/css/site.css
+++ b/DHK.Blazor.Server/wwwroot/css/site.css
@@ -94,7 +94,7 @@ app {
 .header-logo {
     flex-shrink: 0;
     background-color: currentColor;
-    background: url('../images/DKH_LOGO_RED.png');
+    background: url('../images/Digital Knowledge hub - FINAL.png');
     background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
@@ -140,7 +140,7 @@ app {
 .header-logo {
     flex-shrink: 0;
     background-color: currentColor;
-    background: url('../images/DKH_LOGO_RED.png');
+    background: url('../images/Digital Knowledge hub - FINAL.png');
     background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
@@ -199,7 +199,7 @@ html, body {
 .logon-template-header .header-logo {
     flex-shrink: 0;
     background-color: currentColor;
-    background: url('../images/DKH_LOGO_WHITE.png');
+    background: url('../images/Digital Knowledge hub - FINAL.png');
     background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
