--- a/DHK.Blazor.Server/Pages/LoginComponent.razor
+++ b/DHK.Blazor.Server/Pages/LoginComponent.razor
@@ -13,7 +13,7 @@
         <div class="col-lg-4 col-spacer"></div>
         <div class="col-lg-4 login-form">
             <div class="login-logo">
-                <img src="/images/DKH_LOGO_WHITE.png" class="img-fluid dhk-login-img" />
+                <img src="/images/Digital Knowledge hub - FINAL.png" class="img-fluid dhk-login-img" />
             </div>
             @{
                 base.BuildRenderTree(__builder);
