--- a/DHK.Blazor.Server/Pages/_Host.cshtml
+++ b/DHK.Blazor.Server/Pages/_Host.cshtml
@@ -33,7 +33,7 @@
         </div>
     }
     else {
-        <component type="typeof(SplashScreen)" render-mode="Static" param-Caption='"DHK"' param-ImagePath='"images/DKH_Logo_Main.png"' />
+        <component type="typeof(SplashScreen)" render-mode="Static" param-Caption='"DHK"' param-ImagePath='"images/Digital Knowledge hub - FINAL.png"' />
 
         <link href="_content/DevExpress.ExpressApp.Blazor/styles.css" asp-append-version="true" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet" />
